@@ -28,7 +28,6 @@ import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 import org.apache.maven.api.Project;
 import org.apache.maven.api.di.Provides;
@@ -37,7 +36,7 @@ import org.apache.maven.api.plugin.testing.Basedir;
 import org.apache.maven.api.plugin.testing.InjectMojo;
 import org.apache.maven.api.plugin.testing.MojoTest;
 import org.apache.maven.api.plugin.testing.stubs.SessionMock;
-import org.apache.maven.internal.impl.InternalSession;
+import org.apache.maven.impl.InternalSession;
 import org.apache.maven.plugins.resources.stub.MavenProjectResourcesStub;
 import org.apache.maven.shared.filtering.Resource;
 import org.junit.jupiter.api.Test;
@@ -631,9 +630,21 @@ public class ResourcesMojoTest {
         return new MavenProjectResourcesStub();
     }
 
-    private List<Resource> getResources(MavenProjectResourcesStub project) {
+    static List<Resource> getResources(MavenProjectResourcesStub project) {
         return project.getBuild().getResources().stream()
-                .map(ResourceUtils::newResource)
-                .collect(Collectors.toList());
+                .map(ResourcesMojoTest::newResource)
+                .toList();
+    }
+
+    // TODO: temporary method before upgrade to new API.
+    private static Resource newResource(org.apache.maven.api.model.Resource res) {
+        Resource resource = new Resource();
+        resource.setDirectory(res.getDirectory());
+        resource.setFiltering(res.isFiltering());
+        resource.setExcludes(res.getExcludes());
+        resource.setIncludes(res.getIncludes());
+        resource.setMergeId(res.getMergeId());
+        resource.setTargetPath(res.getTargetPath());
+        return resource;
     }
 }
